// Copyright (c) 2026 - Restate Software, Inc., Restate GmbH
//
// This file has been copied from https://github.com/restatedev/restate/blob/0669ed286df5c890b3eefb981469ac0aa312f5cc/crates/core/protobuf/node_ctl_svc.proto
//
// Simplified version for operator use - only includes ProvisionCluster RPC

syntax = "proto3";

package restate.node_ctl_svc;

service NodeCtlSvc {
  // Provision the Restate cluster on this node.
  rpc ProvisionCluster(ProvisionClusterRequest)
      returns (ProvisionClusterResponse);
}

// Replication property wrapper
message ReplicationProperty {
  string replication_property = 1;
}

message ProvisionClusterRequest {
  bool dry_run = 1;
  // if unset then the configured cluster num partitions will be used
  optional uint32 num_partitions = 2;
  // if unset partition replication will default to
  // `admin.default-partition-replication`. Otherwise it's limited to the
  // provided replication property
  optional ReplicationProperty partition_replication = 3;
  // if unset then the configured cluster default log provider will be used
  optional string log_provider = 4;
  // only used if provider = "replicated"
  // if unset then the configured cluster default log replication will be used
  optional ReplicationProperty log_replication = 5;
  // only used if provider = "replicated"
  // if unset then the configured cluster default target nodeset size will be
  // used
  optional uint32 target_nodeset_size = 6;
}

message BifrostProvider {
  string provider = 1;
  // only required if provider = "replicated"
  optional ReplicationProperty replication_property = 2;
  // only required if provider = "replicated"
  uint32 target_nodeset_size = 3;
}

message ClusterConfiguration {
  uint32 num_partitions = 1;
  optional ReplicationProperty partition_replication = 2;
  BifrostProvider bifrost_provider = 3;
}

message ProvisionClusterResponse {
  bool dry_run = 1;
  ClusterConfiguration cluster_configuration = 2;
}
